Adding login changes

--- a/cloud/views/index.hbs
+++ b/cloud/views/index.hbs
@@ -11,3 +11,15 @@
         </select>
 	<input type="submit" name="submit" value="Sign Up">
 </form>
+
+
+<form method="POST" action="/login" id="login">
+	Username: <input type="text" name="username">
+  Password: <input type="text" name="password">
+  Type: <select name="type" form="login">
+          <option value="C1">C1</option>
+          <option value="C2">C2</option>
+          <option value="C3">C3</option>
+        </select>
+	<input type="submit" name="submit" value="login">
+</form>
