--- a/cloud/views/myreservationpage.hbs
+++ b/cloud/views/myreservationpage.hbs
@@ -7,7 +7,8 @@
 
 
   <form method="POST" action="/deleteReservation" id="signup">
-    <input type="hidden" name="hash" value="{{container.name}}">
+    <input type="hidden" name="imagetag" value="{{container.name}}">
+    <input type="hidden" name="conid" value="{{container.conid}}">
   	<input type="submit" name="submit" value="Delete">
   </form>
   <br>
