added session and admindashboard

--- a/cloud/views/index.hbs
+++ b/cloud/views/index.hbs
@@ -3,7 +3,7 @@
 
 <form method="POST" action="/signup" id="signup">
 	Username: <input type="text" name="username">
-  Password: <input type="text" name="password">
+  Password: <input type="password" name="password">
   Type: <select name="type" form="signup">
           <option value="C1">C1</option>
           <option value="C2">C2</option>
@@ -15,7 +15,7 @@
 
 <form method="POST" action="/login" id="login">
 	Username: <input type="text" name="username">
-  Password: <input type="text" name="password">
+  Password: <input type="password" name="password">
   Type: <select name="type" form="login">
           <option value="C1">C1</option>
           <option value="C2">C2</option>
