--- a/cloud/views/index.hbs
+++ b/cloud/views/index.hbs
@@ -5,9 +5,9 @@
 	Username: <input type="text" name="username">
   Password: <input type="password" name="password">
   Type: <select name="type" form="signup">
-          <option value="C1">C1</option>
-          <option value="C2">C2</option>
-          <option value="C3">C3</option>
+          <option value="1>1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
         </select>
 	<input type="submit" name="submit" value="Sign Up">
 </form>
@@ -17,9 +17,9 @@
 	Username: <input type="text" name="username">
   Password: <input type="password" name="password">
   Type: <select name="type" form="login">
-          <option value="C1">C1</option>
-          <option value="C2">C2</option>
-          <option value="C3">C3</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
         </select>
 	<input type="submit" name="submit" value="login">
 </form>
