update end time during container delete

--- a/cloud/views/dashboard.hbs
+++ b/cloud/views/dashboard.hbs
@@ -9,6 +9,7 @@
 <div class="navbar">
   <a href="/reservepage">Create Reservation</a>
   <a href="/myreservationspage">My Reservations</a>
+  <a href="/billingpage">My Billing Dashboard</a>
 </div>
 
 WE COULD SHOW INFORMATION ABOUT THE PROJECT HERE.
