--- a/cloud/views/reserve.hbs
+++ b/cloud/views/reserve.hbs
@@ -52,6 +52,7 @@
                         <option value="AM">AM</option>
                         <option value="PM">PM</option>
             </select>
+            &nbsp&nbsp EST
             <br><br>
 	<input type="submit" name="submit" value="Sign Up">
 </form>
