Show Reservation change

--- a/cloud/views/dashboard.hbs
+++ b/cloud/views/dashboard.hbs
@@ -10,6 +10,7 @@
   <a href="/reservepage">Create Reservation</a>
   <a href="/myreservationspage">My Reservations</a>
   <a href="/billing">My Billing Dashboard</a>
+  <a href="/logout">Logout</a>
 </div>
 
 WE COULD SHOW INFORMATION ABOUT THE PROJECT HERE.
