--- a/cloud/views/mybillingpage.hbs
+++ b/cloud/views/mybillingpage.hbs
@@ -20,6 +20,7 @@ th, td {
   <a href="/reservepage">Create Reservation</a>
   <a href="/myreservationspage">My Reservations</a>
   <a href="/billing">My Billing Dashboard</a>
+  <a href="/logout">Logout</a>
 </div>
 <table style="width:100%">
   <tr>
