--- a/cloud/views/admindashboard.hbs
+++ b/cloud/views/admindashboard.hbs
@@ -6,10 +6,11 @@
 </head>
 <body>
 
-<!-- <div class="navbar">
-  <a href="/reservepage">Create Reservation</a>
-  <a href="/myreservationspage">My Reservations</a>
-</div> -->
+<div class="navbar">
+  <a href="/monitor">Monitor CaaS</a>
+<!--  <a href="/myreservationspage">My Reservations</a>-->
+</div>
+<!--
 Hello, This is admin dashboard
 <br><br><br><br>
 This is container information
@@ -35,5 +36,6 @@ This is compute node information
     State: {{node.state}}
     <hr>
 {{/each}}
+-->
 </body>
 </html>
