--- a/cloud/views/reserve.hbs
+++ b/cloud/views/reserve.hbs
@@ -24,7 +24,7 @@
            <br><br>
   When: <input type="radio" value="1" name="radiobutton"> Now &nbsp&nbsp
 
-
+<!--
             Later &nbsp&nbsp
             <input type="radio" value="0" name="radiobutton">
             <select name="day" form="reserveform">
@@ -125,8 +125,9 @@
                         <option value="59">59</option>
             </select>
             &nbsp&nbsp EST
-            <br><br>
-	<input type="submit" name="submit" value="Sign Up">
+-->            <br><br>
+
+	<input type="submit" name="submit" value="Create Reservation">
 </form>
 <!-- After form submission we can render this template with the result and stuff in reserve router-->
 </body>
