--- a/cloud/views/index.hbs
+++ b/cloud/views/index.hbs
@@ -20,10 +20,10 @@
 <form method="POST" action="/login" id="login">
 	Username: <input type="text" name="username">
   Password: <input type="password" name="password">
-  Type: <select name="type" form="login">
+<!--  Type: <select name="type" form="login">
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
-        </select>
+        </select> -->
 	<input type="submit" name="submit" value="login">
 </form>
